--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,25 @@ body{
     height: 100vh;
     width: 100vw;
 }
+
+/*Quartos*/
+
+.quarto{
+    display: flex;
+    flex-direction:column;
+    height: 100vh;
+    width: 100vw;
+}
+
+.titulo-quarto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding:2rem;
+}
+
+.titulo-quarto h3{
+    font-size: 1.5rem;
+}
